# CapstoneProject-1

./: Database  Database수정본  README.md
Application/: LLM_IMPLEMENTATION.md
Application/AIDocent/: llama_android_integration_guide.md  settings.gradle.kts
Application/AIDocent/app/: build.gradle.kts
Application/AIDocent/app/src/androidTest/java/com/example/airis/: ExampleInstrumentedTest.kt
Application/AIDocent/app/src/main/: AndroidManifest.xml
Application/AIDocent/app/src/main/assets/: art_clip_model.tflite  art_data.json
Application/AIDocent/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  prompt_generate.cpp  prompt_generate.h
Application/AIDocent/app/src/main/java/com/example/airis/: ArtRepository.kt  ArtworkLoader.kt  CameraPreviewScreen.kt  LlamaScreen.kt  MainActivity.kt  MainScreen.kt  MyHistoryScreen.kt  NativeBridge.kt  OnboardingScreen.kt  SimilarityCalculator.kt  SplashScreen.kt  TFLiteModel.kt  YoloDetector.kt
Application/AIDocent/app/src/main/java/com/example/airis/ui/theme/: Color.kt  Font.kt  (+2 more)
Application/AIDocent/app/src/main/res/drawable/: ic_arrow_left.xml  ic_battery_full.xml  ic_current_location.xml  ic_sign_connected.xml  ic_sign_not_connected.xml
Application/AIDocent/app/src/main/res/values/: themes.xml
Application/AIDocent/app/src/main/res/xml/: network_security_config.xml
Application/AIDocent/app/src/test/java/com/example/airis/: ExampleUnitTest.kt
Application/AIDocent/gradle/: libs.versions.toml
Application/AIDocent/gradle/wrapper/: gradle-wrapper.properties
ESP32/: esp32.cpp  esp32_modify.cpp  options of esp32
